# cjm-transcript-workflow-management

./: .gitignore  README.md  demo_app.py  html_ids.html  html_ids.html.md  index.html  index.html.md  models.html  models.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  utils.html  utils.html.md
cjm_transcript_workflow_management/: _modidx.py  html_ids.py  models.py  utils.py
cjm_transcript_workflow_management/components/: document_detail.py  document_list.py  helpers.py  import_controls.py  page_renderer.py
cjm_transcript_workflow_management/routes/: core.py  documents.py  export_.py  import_.py  init.py
cjm_transcript_workflow_management/services/: management.py
components/: document_detail.html  document_detail.html.md  document_list.html  document_list.html.md  helpers.html  helpers.html.md  import_controls.html  import_controls.html.md  page_renderer.html  page_renderer.html.md
nbs/: html_ids.ipynb  index.ipynb  models.ipynb  nbdev.yml  utils.ipynb
nbs/components/: document_detail.ipynb  document_list.ipynb  helpers.ipynb  import_controls.ipynb  page_renderer.ipynb
nbs/routes/: core.ipynb  documents.ipynb  export_.ipynb  import_.ipynb  init.ipynb
nbs/services/: management.ipynb
routes/: core.html  core.html.md  documents.html  documents.html.md  export_.html  export_.html.md  import_.html  import_.html.md  init.html  init.html.md
services/: management.html  management.html.md
tests_manual/: test_management_service.py
