[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-transcript-workflow-management"
dynamic = ["version"]
description = "A FastHTML management interface for context graph documents to list, inspect, delete, and import/export graph spines produced by transcript decomposition workflows."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['cjm-plugin-system>=0.0.30', 'cjm-graph-plugin-system>=0.0.6', 'cjm-graph-domains>=0.0.4', 'python-fasthtml', 'cjm-fasthtml-app-core>=0.0.20', 'cjm-fasthtml-daisyui>=0.0.15', 'cjm-fasthtml-tailwind>=0.0.44', 'cjm-fasthtml-lucide-icons>=0.0.1', 'cjm-fasthtml-virtual-collection>=0.0.25', 'cjm-fasthtml-keyboard-navigation>=0.0.25', 'cjm-fasthtml-viewport-fit>=0.0.14', 'cjm_fasthtml_design_system>=0.0.12']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-transcript-workflow-management"
Documentation = "https://cj-mills.github.io/cjm-transcript-workflow-management"

[project.entry-points.nbdev]
cjm_transcript_workflow_management = "cjm_transcript_workflow_management._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_transcript_workflow_management.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_transcript_workflow_management*"]

[tool.nbdev]
